--- a/docs/stylesheets/custom.css
+++ b/docs/stylesheets/custom.css
@@ -74,6 +74,6 @@ td code {
 
 }
 
-.highlight .gp, .highlight .go { /* Generic.Prompt, Generic.Output */
+.language-pycon .gp, .language-pycon .go { /* Generic.Prompt, Generic.Output */
   user-select: none;
 }
